# avatar

./: .dockerignore  .gitignore  Dockerfile  MORE.md  README.md  SPEC.md
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  config.py  db.py  knowledge.py  main.py  models.py  notifications.py  rate_limit.py  security.py
backend/tests/: conftest.py  test_api_admin.py  test_api_more.py  test_api_public.py  test_config.py  test_db_helpers.py  test_integration_llm.py  test_knowledge.py  test_main_helpers.py  test_notifications.py  test_rate_limit.py  test_security.py  test_static.py  test_supabase_connection.py
design-system/: Avatar Design System.html  README.md  SKILL.md  components.css  doc.css  tokens.css
design-system/docs/: avatar-generation.md  components.md  ux-flows.md
design-system/mockups/: Admin Dashboard.html  Visitor Chat.html
docs/: ARCHITECTURE.md  PLANNING.md
frontend/: admin.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: admin.spec.ts  auth.setup.ts  fixtures.ts  more.spec.ts  three-way.spec.ts  visitor.spec.ts
frontend/src/: api.ts  markdown.ts  theme.ts  util.ts
knowledge/: faq.jsonl  knowledge.md  knowledge_template.md  projects.md  rules.md  style.md
reference/: fetch.ipynb
scripts/: deploy.sh  fly.toml  generate_avatars.py  generate_og.py  seed_faq.py  start_mac.sh  start_pc.ps1  stop_mac.sh  stop_pc.ps1  wordpress-embed.html
test/: backend-test-plan.md  cleanup_e2e.py  e2e-test-plan.md  frontend-test-plan.md  more-test-plan.md
(+7 files in other folders)
