[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.17.4",
    "openai>=2.38.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "supabase>=2.30.1",
    "limits>=5.8.0",
    "mcp-server-fetch>=2026.6.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "llm: tests that call the language model (cost tokens)",
]
